--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/Index.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                                 <form>
                                         <div class="mb-3">
                                           <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                          <input type="email" placeholder="evan.donohue@gmail.com" class="form-control form-control-lg w-100z" id="exampleInputEmail1" >
+                                          <input type="email" data-val="true" data-val-required="The email is required" placeholder="evan.donohue@gmail.com" class="form-control form-control-lg w-100z" id="exampleInputEmail1" >
                                         </div>
                                         <div class="mb-3">
                                           <label for="exampleInputPassword1" class="form-label">Password</label>
