Grid view completed

--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/Register.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Register";
-     Layout = "_Layout";
+    Layout = "_AuthLayout";
 }
 
                       <div class="register-right">
@@ -35,10 +35,10 @@
                                             <button  type="button">Register</button>
                                         </div>
                                         <div class="d-flex p-2 justify-content-center">
-                                            <a asp-controller="Home" asp-action="ForgetPass" class="password  password-lost"><b>Lost your Password?</b></a>
+                                            <a asp-controller="Auth" asp-action="ForgetPass" class="password  password-lost"><b>Lost your Password?</b></a>
                                         </div>
                                         <div class="d-flex justify-content-center">
-                                            <span class="password"> Already Registered? <a asp-controller="Home" asp-action="Index">Login Now</a></span>
+                                            <span class="password"> Already Registered? <a asp-controller="Auth" asp-action="Index">Login Now</a></span>
                                         </div>
                                        <a href="#" class=" d-flex mt-xl-3  p-4 justify-content-center privacy">Privacy Policy</a>
                                   
