--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/ForgetPass.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/ForgetPass.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Forgot Password";
-     Layout = "_Layout";
+    Layout = "_AuthLayout";
 }
 
                        <div class="forget-right">
                         <div class="container">
                             <div class="d-flex justify-content-center align-items-center">
-                                <form class="mt-5 pt-5" asp-controller="Home" asp-action="ResetPass" method="post">
+                                <form class="mt-5 pt-5" asp-controller="Auth" asp-action="ResetPass" method="post">
                                     <h2>Forget Password</h2>
                                     <small id="HelpBlock" class="form-text m-3 text-muted">Enter your email address you've using for your account below and we will send you a password reset link</small>
                                         <div class="m-3">
@@ -18,7 +18,7 @@
                                             <button  type="submit">Reset My Password</button>
                                         </div>
                                         <div class="d-flex p-4 mb-5 justify-content-center">
-                                            <a asp-controller="Home" asp-action="Index" class="login">Login</a>
+                                            <a asp-controller="Auth" asp-action="Index" class="login">Login</a>
                                         </div>
                                         
                                         <a href="#" class=" d-flex sticky-xxl-bottom p-5 mt-5  justify-content-center privacy">Privacy Policy</a>
