--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/Index.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-      Layout = "_Layout";
+     Layout = "_AuthLayout";
     ViewData["Title"] = "Login";
 }
 
@@ -11,7 +11,7 @@
                    <div class="index-right">
                         <div class="container">
                             <div class="d-flex justify-content-center align-items-center">
-                                <form>
+                                <form method="post" asp-controller="Home" asp-action="HomePage">
                                         <div class="mb-3">
                                           <label for="exampleInputEmail1" class="form-label">Email address</label>
                                           <input type="email" data-val="true" data-val-required="The email is required" placeholder="evan.donohue@gmail.com" class="form-control form-control-lg w-100z" id="exampleInputEmail1" >
@@ -21,13 +21,13 @@
                                           <input type="password" placeholder="**********" class="form-control form-control-lg" id="exampleInputPassword1">
                                         </div>
                                         <div class="d-grid gap-2 mx-auto p-2 ">
-                                            <button  type="button">Login</button>
+                                            <button  type="submit">Login</button>
                                         </div>
                                         <div class="d-flex p-2 justify-content-center">
-                                            <a asp-controller="Home" asp-action="ForgetPass" class="password-lost">Lost your Password?</a>
+                                            <a asp-controller="Auth" asp-action="ForgetPass" class="password-lost">Lost your Password?</a>
                                         </div>
                                         <div class="d-flex justify-content-center">
-                                            <span class="password-lost mb-5"> Don't have an account? <a asp-controller="Home" asp-action="Register">Create an account</a></span>
+                                            <span class="password-lost mb-5"> Don't have an account? <a asp-controller="Auth" asp-action="Register">Create an account</a></span>
                                         </div>
                                         <a href="#" class=" d-flex p-5  mt-5 justify-content-center privacy">Privacy Policy</a>
                                         
