--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -1,82 +1,135 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CI_Platform_web</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CI_Platform_web.styles.css" asp-append-version="true" />
+    <title>Home Page </title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="~/css/HomePage.css" asp-append-version="true" />
 </head>
+
 <body>
-            <div class="container-fluid d-flex">
-        <!-- <div class="row"> -->
-            <div class="col-lg-8 ">
-                <div class="left">
-                    <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
-                        <!-- <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                          </div> -->
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <div class="carousel-img"></div>
-                            <!-- <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png" class="d-block carousel-img" alt="..."> -->
-                            <div class="carousel-caption d-none d-md-block">
-                                <h1>image 1 Sed ut perspiciatis unde omnis iste natus voluptatem.</h1>
-                              <p>image 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            </div>
-                          </div>
-                          <div class="carousel-item">
-                            <div class="carousel-img"></div>
-                            <!-- <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png" class="d-block carousel-img" alt="..."> -->
-                            <div class="carousel-caption d-none d-md-block">
-                                <h1> image 2Sed ut perspiciatis unde omnis iste natus voluptatem.</h1>
-                                <p>image 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                              </div>
-                          </div>
-                          <div class="carousel-item">
-                            <div class="carousel-img"></div>
-                            <!-- <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png" class="d-block carousel-img" alt="..."> -->
-                            <div class="carousel-caption d-none d-md-block">
-                                <h1>image 3 Sed ut perspiciatis unde omnis iste natus voluptatem.</h1>
-                                <p> image 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                              </div>
-                          </div>
-                          <div class="carousel-item">
-                            <div class="carousel-img"></div>
-                            <!-- <img src="./images/Grow-Trees-On-the-path-to-environment-sustainability-login.png" class="d-block carousel-img" alt="..."> -->
-                            <div class="carousel-caption d-none d-md-block">
-                                <h1>image 4 Sed ut perspiciatis unde omnis iste natus voluptatem.</h1>
-                                <p> image 4 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                              </div>
-                          </div>
-                        </div>
-                        <a  class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                          <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
-                          <span class="visually-hidden">Previous</span>
+    <header>
+        <!-- Top Nav bar starts here -->
+        <nav class="navbar navbar-expand-lg navbar-dark   main-navigation" id="navbar">
+            <div class="container">
+                <button class="navbar-toggler top-nav-toggle" type="button">
+                    <img src="~/images/list.png">
+                </button>
+                <a class="navbar-brand " asp-controller="Home" asp-action="homepage">
+                    <img src="~/images/logo.png">
+                </a>
+                <div class=" d-lg-flex flex-lg-row-reverse">
+                    <div class="overlay d-flex d-lg-none"></div>
+                    <div class="order-lg-2 d-lg-flex flex-row d-lg-flex w-100 sidebar pb-3 pb-lg-0">
+                        <ul class="navbar-nav  mb-2 mb-lg-0 p-lg-2">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link text-dark px-3 px-lg-2 dropdown-toggle" href="#" id="dropdown"
+                                   role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    &nbsp;Explore
+                                    <img src="~/images/drop-down.png ">
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider" />
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link text-dark px-3 px-lg-2 active" aria-current="page" href="#">
+
+                                    &nbsp;Stories
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark px-3 px-lg-2" href="#">
+
+                                 
+                                    &nbsp;News
+                                </a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link text-dark px-3 px-lg-2 dropdown-toggle" href="#" id="dropdown"
+                                   role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    &nbsp;Policy
+                                    <img src="~/images/drop-down.png ">
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider" />
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <div class=" d-flex flex-row mb-2 mb-lg-0">
+                        <a class="nav-link text-dark px-3 px-lg-2 dropdown-toggle" href="#" id="dropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="~/images/bell.png" alt="user-img" class=" rounded-circle p-2" />
                         </a>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                          <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
-                          <span class="visually-hidden">Next</span>
-                        </button>
-                      </div>
+                        <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Notifications</a></li>
+                            <li><a class="dropdown-item" href="#"></a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#"></a></li>
+                        </ul>
+                        <a class="nav-link text-dark px-3 px-lg-2 dropdown-toggle" href="#" id="dropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="~/images/user-img.png" alt="user-img" class=" rounded-circle user-image" />
+                            &nbsp; Evan Donohue
+                            <img src="~/images/drop-down.png ">
+                        </a>
+                        <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">My Profile</a></li>
+                            <li><a class="dropdown-item" href="#">Volunteering Timesheet</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Logout</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+           
+        </nav>
+        <!-- Top Nav bar ends here -->
+    </header>
 
-            <div class="col-lg-4 ">
-                
-                        <main role="main" >
-                            @RenderBody()
-                        </main>
-            </div>
-         </div>
-    
+    <main role="main" >
+        @RenderBody()
+    </main>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+            crossorigin="anonymous"></script>
+    <script src="~/js/HomePage.js"></script>
+    @*<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>*@
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+            integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+            crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
+
