--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -8,17 +8,17 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    @*<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>*@
+        crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
     <link rel="stylesheet" href="~/css/HomePage.css" asp-append-version="true" />
-    @*<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">*@
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
-<body onload="for_grid()">
+<body style="display:flex; flex-direction:column; min-height:100vh;" onload="for_grid()">
   
 
         <header>
@@ -56,7 +56,7 @@
                                         </li>
 
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link ms-3 dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink"
+                                            <a class="nav-link ms-3 dropdown-toggle" asp-controller="Home" asp-action="StoryListing" id="navbarDarkDropdownMenuLink"
                                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Stories
                                             </a>
@@ -105,7 +105,7 @@
 
                             <a class="nav-item nav-link " href="#">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link ms-3 dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+                            <a class="nav-link ms-3 dropdown-toggle" asp-controller="Home" asp-action="StoryListing" id="navbarDarkDropdownMenuLink" role="button"
                                        data-bs-toggle="dropdown" aria-expanded="false">
                                         <span class="text-dark p-2">Stories</span>
                                     </a>
@@ -173,21 +173,21 @@
         </header>
 
 
-            <main role="main">
+            <main role="main" style="flex:auto;">
                 @RenderBody()
             </main>
 
        
-
-        <footer class="flex-shrink-0 flex-grow-0">
-            <div class="border-navbar"></div>
+         <div class="border-navbar"></div>
+        <footer class="footer">
+           
             <a href="#" class="footer">Privacy Policy</a>
         </footer>
 
  
 
 
-    @*    <script src="js/bootstrap.bundle.js"></script>*@
+        <script src="js/bootstrap.bundle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
