--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/Index.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/Index.cshtml
@@ -2,7 +2,7 @@
     Layout = "_AuthLayout";
     ViewData["Title"] = "Login";
 }
-
+@model CI_Platform.Entities.DataModels.User
 
 
 
@@ -10,14 +10,14 @@
 <div class="index-right">
     <div class="container">
         <div class="d-flex justify-content-center align-items-center">
-            <form method="post" asp-controller="Home" asp-action="HomePage">
+            <form method="post">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" data-val="true" data-val-required="The email is required" placeholder="evan.donohue@gmail.com" class="form-control form-control-lg w-100z" id="exampleInputEmail1">
+                    <label asp-for="Email" class="form-label">Email address</label>
+                    <input asp-for="Email" type="email" data-val="true" data-val-required="The email is required" placeholder="evan.donohue@gmail.com" class="form-control form-control-lg w-100z" id="exampleInputEmail1">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" placeholder="**********" class="form-control form-control-lg" id="exampleInputPassword1">
+                    <label asp-for="Password" class="form-label">Password</label>
+                    <input asp-for="Password" type="password" placeholder="**********" class="form-control form-control-lg" id="exampleInputPassword1">
                 </div>
                 <div class="d-grid gap-2 mx-auto p-2 ">
                     <button type="submit">Login</button>
