--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_AuthLayout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_AuthLayout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CI_Platform_web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="~/css/AuthStyle.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CI_Platform_web.styles.css" asp-append-version="true" />
 </head>
@@ -68,6 +69,7 @@
             <div class="col-lg-4 ">
                 
                         <main role="main" >
+                            <partial name="_Notification" />
                             @RenderBody()
                         </main>
             </div>
